--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,93 @@
-body {
+:root {
+  --orange: #ff7800;
+  --black: #130f40;
+  --light-color: #666;
+  --box-shadow: 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
+  --border: 2rem solid rgba(0, 0, 0, 0.1);
+  --outline: 1rem solid rgba(0, 0, 0, 0.1);
+  --outline-hover: 0.5rem solid var(--black);
+}
+
+* {
+  font-family: 'poppins', sans-serif;
   margin: 0;
   padding: 0;
-  font-weight: normal;
+  box-sizing: border-box;
+  outline: none;
+  text-transform: capitalize;
+  transition: all 0.2s linear;
+}
+
+#app {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  scroll-padding-top: 7rem;
+}
+
+body {
+  background: #eee;
+}
+
+section {
+  padding: 2rem 9%;
+}
+
+.heading {
+  text-align: center;
+  padding: 2rem 0rem;
+  padding-bottom: 3rem;
+  font-size: 3.5rem;
+  color: var(--black);
+}
+
+.heading span {
+  background: var(--orange);
+  color: #fff;
+  display: inline-block;
+  padding: 0.2rem 4rem;
+  clip-path: polygon(100% 0, 93% 50%, 100% 99%, 0% 100%, 7% 50%, 0% 0%);
+}
+
+.btn {
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 1rem 1em;
+  font-size: 1.4rem;
+  border-radius: 1rem;
+  border: 0.4rem solid var(--black);
+  color: var(--black);
+  cursor: pointer;
+  background: none;
+}
+.btn:hover {
+  background: var(--orange);
+  color: #fff;
+}
+/*media queries*/
+
+@media (max-width: 991px) {
+  #app {
+    font-size: 55%;
+  }
+  section {
+    padding: 2rem;
+  }
+  .heading {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 450px) {
+  #app {
+    font-size: 50%;
+  }
+  .heading {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 350px) {
+  .heading {
+    font-size: 1rem;
+  }
 }
