--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -36,8 +36,8 @@ section {
 .heading {
   text-align: center;
   padding: 2rem 0rem;
-  padding-bottom: 3rem;
-  font-size: 3.5rem;
+  padding-bottom: 4rem;
+  font-size: 2rem;
   color: var(--black);
 }
 
@@ -51,11 +51,16 @@ section {
 
 .btn {
   margin-top: 1rem;
-  display: inline-block;
-  padding: 1rem 1em;
-  font-size: 1.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  text-decoration: none;
+  font-size: 1rem;
+  width: 140px;
+  height: 20px;
   border-radius: 1rem;
-  border: 0.4rem solid var(--black);
+  border: 0.2rem solid var(--black);
   color: var(--black);
   cursor: pointer;
   background: none;
