--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -50,15 +50,15 @@ section {
 }
 
 .btn {
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 10px 20px;
   text-decoration: none;
   font-size: 1rem;
-  width: 140px;
-  height: 20px;
+  /* width: 140px;
+  height: 20px; */
   border-radius: 1rem;
   border: 0.2rem solid var(--black);
   color: var(--black);
